Geocode properties on creation
